--- a/influence/Bitcoin-Price-News-Impact_v0.0.1.ipynb
+++ b/influence/Bitcoin-Price-News-Impact_v0.0.1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -50,24 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Loading the Bitcoin price data\n",
+    "# Loading the Bitcoin PRICE data\n",
     "# Format:\n",
     "# EPOCH_TIMESTAMP, PRICE_VALUE, NO_FUCKING_CLUE\n",
     "data_location = r'_raw_data/b7USD.csv'\n",
     "# reading the CSV file while specifying headers (with the param names), \n",
     "# because there aren't any in those csv files\n",
-    "raw_data = pd.read_csv(data_location, names=['TimeStamp', 'Price', 'RandV'])"
+    "raw_price_data = pd.read_csv(data_location, names=['TimeStamp', 'Price', 'RandV'])\n",
+    "\n",
+    "# Loading Bitcoin Transactions Volume Data (in BTC)\n",
+    "data_location = r'_raw_data/trans_volumes/BCHAIN-ETRAV.csv'\n",
+    "raw_trans_vol = pd.read_csv(data_location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -81,18 +85,42 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_data.count()"
+    "raw_price_data.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date     2269\n",
+       "Value    2269\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_trans_vol.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -107,24 +135,46 @@
     "# Timestamp to formatted date conversion\n",
     "# unit='s' is to specify that the timestamp \n",
     "# was stored with the seconds unit\n",
-    "raw_data['DateTime'] = pd.to_datetime(raw_data['TimeStamp'], unit='s')"
+    "raw_price_data['DateTime'] = pd.to_datetime(raw_price_data['TimeStamp'], unit='s')\n",
+    "\n",
+    "# Change the Date column type from object(default)\n",
+    "# to datetime\n",
+    "raw_trans_vol['Date'] = pd.to_datetime(raw_trans_vol['Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Creating a DataFrame from the raw data\n",
-    "df1 = pd.DataFrame(raw_data, columns=['DateTime', 'Price'])"
+    "# Creating a DataFrame from the Bitcoin price raw data\n",
+    "btcp_df = pd.DataFrame(raw_price_data, columns=['DateTime', 'Price'])\n",
+    "\n",
+    "# Create a DataFrame from Trans Volume (in BTC) raw data\n",
+    "trans_volBTC_df = pd.DataFrame(raw_trans_vol, columns=['Date', 'Volume'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Limit the Transaction Volume Data to a range\n",
+    "# trans_volBTC_df[(trans_volBTC_df['Date'] >= pd.datetime(2011,7,1)) \n",
+    "#                 & (trans_volBTC_df['Date'] <= pd.datetime(2011,10,31))].head()\n",
+    "# trans_volBTC_df=trans_volBTC_df.set_index('Date')\n",
+    "# trans_volBTC_df['2011-7':'2011-10'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -132,10 +182,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x1125c0dd0>"
+       "<matplotlib.text.Text at 0x113a4ad10>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -872,7 +922,7 @@
        "JEmSJGmIGdRJkiRJ0hD7H7KVDGXGeARiAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x112757690>"
+       "<matplotlib.figure.Figure at 0x113a4da50>"
       ]
      },
      "metadata": {},
@@ -880,20 +930,20 @@
     }
    ],
    "source": [
-    "# Defining the plot\n",
-    "# and its properties\n",
-    "out_fig = plt.figure()\n",
-    "\n",
-    "# plot properties\n",
-    "a = df1.plot(x='DateTime', y='Price', figsize=(15,10))\n",
+    "# Plotting the bitcoin price in USD over time\n",
+    "# Plot properties\n",
+    "a = btcp_df.plot(x='DateTime', y='Price', figsize=(15,10))\n",
     "a.xaxis.set_major_locator(dates.MonthLocator(bymonth=range(1,13), bymonthday=1, interval=1))\n",
     "a.xaxis.set_major_formatter(dates.DateFormatter(\"%b '%y\"))\n",
-    "\n",
     "\n",
     "# Layout\n",
     "a.set_title(\"b7 Bitcoin Value in USD\", weight=\"bold\", size=18)\n",
     "a.set_xlabel(\"Month - Year\", size=14)\n",
-    "a.set_ylabel('Bitcoin USD Price', size=14)"
+    "a.set_ylabel('Bitcoin USD Price', size=14)\n",
+    "\n",
+    "# ==================================\n",
+    "\n",
+    "# Plotting the BTC Volume over time\n"
    ]
   }
  ],
