--- a/influence/Bitcoin-Price-News-Impact_v0.1.2.ipynb
+++ b/influence/Bitcoin-Price-News-Impact_v0.1.2.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1638,7 +1638,7 @@
        "EREREa2Xgk1ERERERLTe/wMRWJ706eG8kwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1bc391750>"
+       "<matplotlib.figure.Figure at 0x2888337d0>"
       ]
      },
      "metadata": {},
