add python data scrapper for reddit

--- a/influence/Bitcoin-Price-News-Impact_v0.1.2.ipynb
+++ b/influence/Bitcoin-Price-News-Impact_v0.1.2.ipynb
@@ -533,6 +533,7 @@
     }
    ],
    "source": [
+    "# Comment this section [TODO]\n",
     "btc_df = btc_df.set_index('Date')\n",
     "btc_df.head()"
    ]
@@ -1646,6 +1647,7 @@
     }
    ],
    "source": [
+    "# Code comments are necessary here [TODO]\n",
     "fig = plt.figure(figsize=(13,10))\n",
     "ax = fig.add_subplot(211)\n",
     "ax2 = ax.twinx()\n",
