added json_to_csv translator and unit tests for it

--- a/data_analysis/Bitcoin-Price-News-Impact_v0.1.2.ipynb
+++ b/data_analysis/Bitcoin-Price-News-Impact_v0.1.2.ipynb
@@ -49,13 +49,11 @@
    },
    "outputs": [],
    "source": [
-    "# Import the necessary shit\n",
+    "# Import the necessary libraries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import matplotlib.dates as dates\n",
-    "\n",
-    "mpl.rc('figure', figsize=(8, 7))\n",
     "\n",
     "# Enable inline plotting\n",
     "%matplotlib inline"
